--- a/src/R/pcgrr/inst/templates/msi.Rmd
+++ b/src/R/pcgrr/inst/templates/msi.Rmd
@@ -1,6 +1,6 @@
 ## MSI status
 
-Microsatellite instability (MSI) is the result of impaired DNA mismatch repair and constitutes a cellular phenotype of clinical significance in many cancer types, most prominently colorectal cancers, stomach cancers, endometrial cancers, and ovarian cancers ([Cortes-Ciriano et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28585546)). We have built a statistical MSI classifier from somatic mutation profiles that separates _MSI.H_ (MSI-high) from _MSS_ (MS stable) tumors. The MSI classifier was trained using 999 exome-sequenced TCGA tumor samples with known MSI status (i.e. assayed from mononucleotide markers), and obtained a [positive predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Positive_predictive_value) of 93.6% and a [negative predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Negative_predictive_value) of 98.8% on an independent test set of 427 samples. Details of the MSI classification approach can be found <a href="http://rpubs.com/sigven/msi2018" target="_blank">here</a>.
+Microsatellite instability (MSI) is the result of impaired DNA mismatch repair and constitutes a cellular phenotype of clinical significance in many cancer types, most prominently colorectal cancers, stomach cancers, endometrial cancers, and ovarian cancers ([Cortes-Ciriano et al., 2017](https://www.ncbi.nlm.nih.gov/pubmed/28585546)). We have built a statistical MSI classifier from somatic mutation profiles that separates _MSI.H_ (MSI-high) from _MSS_ (MS stable) tumors. The MSI classifier was trained using 999 exome-sequenced TCGA tumor samples with known MSI status (i.e. assayed from mononucleotide markers), and obtained a [positive predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Positive_predictive_value) of 100.0% and a [negative predictive value](https://en.wikipedia.org/wiki/Positive_and_negative_predictive_values#Negative_predictive_value) of 98.8% on an independent test set of 427 samples. Details of the MSI classification approach can be found <a href="http://rpubs.com/sigven/msi2018" target="_blank">here</a>.
 
 <br>
 
@@ -23,7 +23,7 @@ htmltools::br()
 
 <br>
 ```{r msi_gene_variants, echo=F, results='asis'}
-if(nrow(pcg_report[['msi']][['prediction']][['mmr_pol_variants']]) > 0){
+if(NROW(pcg_report[['msi']][['prediction']][['mmr_pol_variants']]) > 0){
   DT::datatable(pcg_report[['msi']][['prediction']][['mmr_pol_variants']], escape=F,extensions=c("Buttons","Responsive"), width = "100%",options=list(buttons = c('csv','excel'),dom = 'Bfrtip'))
 }else{
   cat('<i>No variants found.</i>',sep='\n')
