--- a/src/R/pcgrr/inst/templates/predispose/tier1_predispose.Rmd
+++ b/src/R/pcgrr/inst/templates/predispose/tier1_predispose.Rmd
@@ -1,42 +1,59 @@
 
-### Tier 1 - Pathogenic ClinVar variants
+### Tier 1 - Pathogenic variants {.tabset}
 
 <br>
 
 ```{r prepare_tier1_data, echo=F, results='asis'}
 
-show_tier_filters <- F
-missing_tier1 <- T
-if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier1']]) > 0){
-  show_tier_filters <- T
-  missing_tier1 <- F
+
+show_tier1_filters <- list()
+missing_tier1_items <- list()
+for(type in c('cancer_phenotype','noncancer_phenotype')){
+  show_tier1_filters[[type]] <- F
+  missing_tier1_items[[type]] <- T
+  if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier1']][[type]]) > 0){
+    show_tier1_filters[[type]] <- T
+    missing_tier1_items[[type]] <- F
+  }
 }
+
+
+tag_tgp <- pcg_report[['pcgr_config']][['popgen']][['vcftag_tgp']]
+desc_tgp <- pcg_report[['pcgr_config']][['popgen']][['popdesc_tgp']]
+formula_tgp <- as.formula(paste0("~",rlang::sym(tag_tgp)))
+tag_gnomad <- pcg_report[['pcgr_config']][['popgen']][['vcftag_gnomad']]
+desc_gnomad <- pcg_report[['pcgr_config']][['popgen']][['popdesc_gnomad']]
+formula_gnomad <- as.formula(paste0("~",rlang::sym(tag_gnomad)))
+
 
 
 ```
 
 
-```{r tier1, echo=F, results = 'asis', eval = show_tier_filters}
+#### Cancer phenotypes
+
+```{r tier1_cancer, echo=F, results = 'asis', eval = show_tier1_filters[['cancer_phenotype']]}
 library(summarywidget)
 library(crosstalk)
 
 
-cat('A total of ',nrow(pcg_report[['snv_indel']][['variant_display']][['tier1']]), ' unique, germline variant(s) are found as pathogenic in ClinVar for the selected cancer predisposition genes:')
+cat('A total of ',NROW(pcg_report[['snv_indel']][['variant_display']][['tier1']][['cancer_phenotype']]), ' unique, germline variant(s) are found as pathogenic and associated with cancer phenotypes in ClinVar for the selected predisposition genes:')
 cat('\n')
 htmltools::br()
 htmltools::br()
 
-variants_tier1_shared <- crosstalk::SharedData$new(pcg_report[['snv_indel']][['variant_display']][['tier1']])
+variants_tier1_cancer <- crosstalk::SharedData$new(pcg_report[['snv_indel']][['variant_display']][['tier1']][['cancer_phenotype']])
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier1_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("SYMBOL", "Gene", variants_tier1_shared, ~SYMBOL),
-    crosstalk::filter_select("PHENOTYPE", "Condition(s)", variants_tier1_shared, ~PHENOTYPE)
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier1_cancer, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_tier1_cancer, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_tier1_cancer, ~SYMBOL),
+    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_tier1_cancer, ~CLINVAR_PHENOTYPE)
   ),
   list(
-    crosstalk::filter_select("PROTEIN_DOMAIN", "Protein domain", variants_tier1_shared, ~PROTEIN_DOMAIN),
-    crosstalk::filter_slider("NFE_AF_GNOMAD", "Minor allele frequency Europeans (gnomAD-NFE)", variants_tier1_shared, ~NFE_AF_GNOMAD,sep="", ticks = F),
-    crosstalk::filter_slider("GLOBAL_AF_GNOMAD", "Minor allele frequency global (gnomAD)", variants_tier1_shared, ~GLOBAL_AF_GNOMAD, sep="",ticks = F)
+    crosstalk::filter_checkbox("LOSS_OF_FUNCTION", "Predicted loss-of-function variant", variants_tier1_cancer, ~LOSS_OF_FUNCTION),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_tier1_cancer, formula_gnomad, sep="",ticks = F),
+    crosstalk::filter_slider(tag_tgp, paste0("MAF 1000 Genomes Project (",desc_tgp,")"), variants_tier1_cancer, formula_tgp, sep="",ticks = F)
   )
 )
 
@@ -46,14 +63,60 @@ htmltools::br()
 htmltools::br()
 
 crosstalk::bscols(
-  DT::datatable(variants_tier1_shared, escape=F,extensions=c("Buttons","Responsive"), width = "100%",options=list(buttons = c('csv','excel'),dom = 'Bfrtip'))
+  DT::datatable(variants_tier1_cancer, escape=F,extensions=c("Buttons","Responsive"), width = "100%",options=list(buttons = c('csv','excel'),dom = 'Bfrtip'))
 )
 
 #htmltools::br()
 
 ```
 
-```{r tier1_missing, echo=F, results = 'asis', eval = missing_tier1}
+```{r tier1_cancer_missing, echo=F, results = 'asis', eval = missing_tier1_items[['cancer_phenotype']]}
+cat('<i>No variants found.</i>',sep='\n')
+cat('\n')
+```
+<br><br>
+
+#### Undefined/non-cancer phenotypes
+
+```{r tier1_noncancer, echo=F, results = 'asis', eval = show_tier1_filters[['noncancer_phenotype']]}
+library(summarywidget)
+library(crosstalk)
+
+
+cat('A total of ',NROW(pcg_report[['snv_indel']][['variant_display']][['tier1']][['noncancer_phenotype']]), ' unique, germline variant(s) are found as pathogenic and associated with undefined/non-cancer phenotypes in ClinVar for the selected predisposition genes:')
+cat('\n')
+htmltools::br()
+htmltools::br()
+
+variants_tier1_noncancer <- crosstalk::SharedData$new(pcg_report[['snv_indel']][['variant_display']][['tier1']][['noncancer_phenotype']])
+
+crosstalk::bscols(
+  list(
+    crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier1_noncancer, ~CONSEQUENCE),
+    crosstalk::filter_checkbox("GENOTYPE", "Genotype", variants_tier1_noncancer, ~GENOTYPE),
+    crosstalk::filter_select("SYMBOL", "Gene", variants_tier1_noncancer, ~SYMBOL),
+    crosstalk::filter_select("CLINVAR_PHENOTYPE", "ClinVar phenotype(s)", variants_tier1_noncancer, ~CLINVAR_PHENOTYPE)
+  ),
+  list(
+    crosstalk::filter_checkbox("LOSS_OF_FUNCTION", "Predicted loss-of-function variant", variants_tier1_noncancer, ~LOSS_OF_FUNCTION),
+    crosstalk::filter_slider(tag_gnomad, paste0("MAF gnomAD (",desc_gnomad,")"), variants_tier1_noncancer, formula_gnomad, sep="",ticks = F),
+    crosstalk::filter_slider(tag_tgp, paste0("MAF 1000 Genomes Project (",desc_tgp,")"), variants_tier1_noncancer, formula_tgp, sep="",ticks = F)
+  )
+)
+
+
+htmltools::br()
+htmltools::br()
+
+crosstalk::bscols(
+  DT::datatable(variants_tier1_noncancer, escape=F,extensions=c("Buttons","Responsive"), width = "100%",options=list(buttons = c('csv','excel'),dom = 'Bfrtip'))
+)
+
+#htmltools::br()
+
+```
+
+```{r tier1_noncancer_missing, echo=F, results = 'asis', eval = missing_tier1_items[['noncancer_phenotype']]}
 cat('<i>No variants found.</i>',sep='\n')
 cat('\n')
 ```
