--- a/src/R/pcgrr/inst/templates/tier2.Rmd
+++ b/src/R/pcgrr/inst/templates/tier2.Rmd
@@ -1,7 +1,7 @@
 ### Tier 2 - Other cancer mutation hotspots, curated mutations, or predicted driver mutations {.tabset}
 
 ```{r num_tier2, echo=F}
-n_mutations_tier2 = nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) + nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']]) + nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']])
+n_mutations_tier2 = NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) + NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']]) + NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']])
 ```
 - A total of __`r n_mutations_tier2`__ unique, somatic variant(s) in the tumor sample are curated as disease-causing, predicted as driver mutations, or occur in known cancer mutation hotspots.
 <br><br>
@@ -12,10 +12,10 @@ n_mutations_tier2 = nrow(pcg_report[['snv_indel']][['variant_display']][['tier2'
 
 ```{r tier2_hotspot, echo=F, results = 'asis'}
  cat('The table below lists variants detected as mutation hotspots according to <a href="http:/cancerhotspots.org/" target="_blank">cancerhotspots.org<a/>:',sep='\n')
-if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) > 0){
+if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) > 0){
   cat('\n')
   myOptions <- list(paging = F, searching=F,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
-  if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) > 10){
+  if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) > 10){
     myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
   }
   DT::datatable(dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']], CANCER_MUTATION_HOTSPOT,dplyr::everything()), options = myOptions, escape=F, extensions = c("Buttons","Responsive")) %>%
@@ -34,11 +34,11 @@ if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['hotspot']]) 
 
 ```{r tier2_disease_causing, echo=F, results='asis'}
 
-if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']]) > 0){
+if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']]) > 0){
   cat('\n')
   cat('The table below lists all other variants in Tier 2 curated as disease-causing in the <a href="http://docm.genome.wustl.edu/" target="_blank">Database of Curated Mutations<a/>:',sep='\n')
   myOptions <- list(paging = F, searching=F,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
-  if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']]) > 10){
+  if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']]) > 10){
     myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
   }
   curated_mutations <- dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_mutation']], -CANCER_MUTATION_HOTSPOT)
@@ -58,11 +58,11 @@ if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['curated_muta
 
 ```{r tier2_predicted_driver, echo=F,results='asis'}
 
-if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']]) > 0){
+if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']]) > 0){
   cat('The table below lists all other variants in Tier 2 predicted as cancer driver mutations in <a href="https://www.intogen.org/downloads" target="_blank">Intogen\'s catalog of driver mutations</a>:',sep='\n')
   
   myOptions <- list(paging = F, searching=F,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
-  if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']]) > 10){
+  if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']]) > 10){
     myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
   }
   predicted_drivers <- dplyr::select(pcg_report[['snv_indel']][['variant_display']][['tier2']][['predicted_driver']], -c(INTOGEN_DRIVER_MUT, CANCER_MUTATION_HOTSPOT, DOCM_DISEASE, DOCM_LITERATURE))
