--- a/src/R/pcgrr/inst/templates/tier4.Rmd
+++ b/src/R/pcgrr/inst/templates/tier4.Rmd
@@ -1,17 +1,17 @@
 ### Tier 4 - Other coding mutations
 
-- A total of __`r nrow(pcg_report[['snv_indel']][['variant_display']][['tier4']])`__ unique, coding somatic variant(s) are also found in the tumor sample.
+- A total of __`r NROW(pcg_report[['snv_indel']][['variant_display']][['tier4']])`__ unique, coding somatic variant(s) are also found in the tumor sample.
 
 <br><br>
 ```{r tier4, results='asis', echo=F}
 
 myOptions <- list(paging = F,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
-if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier4']]) > 10){
+if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier4']]) > 10){
   myOptions <- list(paging = T,pageLength=10, searching=T,caching=F,buttons = c('csv','excel'),dom = 'Bfrtip')
 }
 
-if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier4']]) > 0){
-  if(nrow(pcg_report[['snv_indel']][['variant_display']][['tier4']]) > 2000){
+if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier4']]) > 0){
+  if(NROW(pcg_report[['snv_indel']][['variant_display']][['tier4']]) > 2000){
     cat('<b>NOTE - listing top 2000 variants according to ONCOSCORE</b><br>',sep="\n")
     cat('<br>')
     pcg_report[['snv_indel']][['variant_display']][['tier4']] <- head(pcg_report[['snv_indel']][['variant_display']][['tier4']], 2000)
